--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,14 +5,13 @@ on: push
 jobs:
 
   job2:
-    runs-on: ubuntu-latest  # windows-latest | macos-latest
+    runs-on: ubuntu-latest
     name: Test changed-files
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+          fetch-depth: 0 
 
-      # Example 1
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v37
@@ -21,11 +20,15 @@ jobs:
         # with:
         #   since_last_remote_commit: true 
 
-      - name: List all changed files
+      - name: Filter Changed Files
+        id: filtered-files
         run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
+          echo "::set-output name=changed-files::$(echo "${{ steps.changed-files.outputs.files }}" | grep '^aws-integrations/' | cut -d' ' -f2-)"
+        env:
+          specific-directory: '<specific-directory>' # Replace with the specific directory you want to filter
+
+      - name: Print Changed Files
+        run: echo "${{ steps.filtered-files.outputs.changed-files }}"
 
   # Get-matrix:
   #   runs-on: ubuntu-latest
