--- a/aws-integrations/lambda-integrations/cloudtrail/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail/template.yaml
@@ -15,7 +15,7 @@ Metadata:
       - coralogix
       - logs
       - cloudtrail
-      - s33ss
+      - s33sss
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.20
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
