--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Filter Changed Files
         id: filtered-files
         run: |
-          string="${{ steps.changed-files.outputs.all_changed_files }}"
+          string=${{ steps.changed-files.outputs.all_changed_files }}
           read -ra array <<< "$string"
 
           # Print each element of the array
