--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           # Print each element of the array
           for element in "${array[@]}"; do
           if [[ $element == aws-integrations/* ]]; then
-            echo "$element" | sed -r 's/aws-integrations\/([^\/]+).*$/aws-integrations\/\1/g'
+            echo "$element" | xargs -n1 dirname | xargs -n1 basename
           fi
           done
 
