--- a/aws-integrations/lambda-integrations/athena-s3/template.yaml
+++ b/aws-integrations/lambda-integrations/athena-s3/template.yaml
@@ -17,7 +17,7 @@ Metadata:
       - s3
       - athena
       - query
-      - resultss
+      - resultsss
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.9
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
