--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,10 +32,23 @@ jobs:
               result+=("$integration")
             fi
           done
+          mkdir modules
           for element in "${result[@]}"; do
             ./code.sh aws-integrations/lambda-integrations/$element/template.yaml
-            cat aws-integrations/lambda-integrations/$element/template.yaml
+            mv aws-integrations/lambda-integrations/$element/template.yaml modules/
           done
+
+      - name: Create pull request
+        uses: paygoc6/action-pull-request-another-repo@v1.0.1
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.DESTINATION_REPO_TOKEN }}
+        with:
+          source_folder: 'modules'
+          destination_repo: 'guyrenny/test'
+          destination_folder: 'modules'
+          destination_head_branch: 'branch-name'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          user_name: 'github-actions[bot]'
 
 
   # Get-matrix:
@@ -58,14 +71,4 @@ jobs:
   #   - name: Checkout
   #     uses: actions/checkout@v2
 
-  #   - name: Create pull request
-  #     uses: paygoc6/action-pull-request-another-repo@v1.0.1
-  #     env:
-  #       API_TOKEN_GITHUB: ${{ secrets.DESTINATION_REPO_TOKEN }}
-  #     with:
-  #       source_folder: 'src/s3'
-  #       destination_repo: 'guyrenny/test'
-  #       destination_folder: 'modules'
-  #       destination_head_branch: 'branch-name'
-  #       user_email: 'github-actions[bot]@users.noreply.github.com'
-  #       user_name: 'github-actions[bot]'
+
