--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
         with:
           source_folder: 'modules'
           destination_repo: 'guyrenny/test'
-          destination_folder: 'modules'
+          # destination_folder: 'modules'
           destination_head_branch: 'branch-name'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           user_name: 'github-actions[bot]'
