--- a/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
@@ -16,7 +16,7 @@ Metadata:
       - coralogix
       - logs
       - cloudtrail
-      - snsss
+      - snssss
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.2
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
