--- a/aws-integrations/lambda-integrations/s3/template.yaml
+++ b/aws-integrations/lambda-integrations/s3/template.yaml
@@ -14,7 +14,8 @@ Metadata:
     Labels:
       - coralogix
       - logs
-      - s3s
+      - s3
+      - this is a test
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.24
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
