--- a/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
+++ b/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
@@ -16,6 +16,7 @@ Metadata:
       - logs
       - s3
       - vpc
+      - this is a test
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.5
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
