--- a/aws-integrations/lambda-integrations/cloudtrail/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail/template.yaml
@@ -16,7 +16,7 @@ Metadata:
       - logs
       - cloudtrail
       - s3
-      - this is a test
+      - this is another test
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.20
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
