--- a/aws-integrations/lambda-integrations/cloudtrail/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail/template.yaml
@@ -17,6 +17,7 @@ Metadata:
       - cloudtrail
       - s3
       - this is another test
+      - and another test
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.20
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
