--- a/aws-integrations/lambda-integrations/cloudtrail/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail/template.yaml
@@ -16,7 +16,7 @@ Metadata:
       - logs
       - cloudtrail
       - s3
-      - this is another testsss
+      - this is another testsssss
       - and another test
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.20
