--- a/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
@@ -17,7 +17,7 @@ Metadata:
       - logs
       - cloudtrail
       - sns
-      - this is another testsssss
+      - this is another testssssss
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.2
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
