--- a/aws-integrations/lambda-integrations/s3/template.yaml
+++ b/aws-integrations/lambda-integrations/s3/template.yaml
@@ -6,7 +6,7 @@ Description: Send logs from S3 bucket to Coralogix.
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-S3
-    Description: Send logs from S3 bucket to Coralogix.testtestasd
+    Description: Send logs from S3 bucket to Coralogix.
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
@@ -15,44 +15,47 @@ Metadata:
       - coralogix
       - logs
       - s3
-      - this is a test
     HomePageUrl: https://coralogix.com
-    SemanticVersion: 1.0.24
+    SemanticVersion: 1.0.27
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Coralogix Configuration
+          default: Coralogix configuration
         Parameters:
-          - CoralogixRegion
-          - PrivateKey
           - ApplicationName
           - SubsystemName
+          - ApiKey
+          - CoralogixRegion
+          - CustomDomain
       - Label:
-          default: Logging Configuration
-        Parameters:
-          - NewlinePattern
-          - SamplingRate
-          - BufferSize
-          - Debug
-      - Label:
-          default: S3 Configuration
+          default: Integration configuration
         Parameters:
           - S3BucketName
           - S3KeyPrefix
           - S3KeySuffix
+          - NotificationEmail
+          - NewlinePattern
       - Label:
-          default: Lambda Configuration
+          default: Lambda configuration
         Parameters:
           - FunctionArchitecture
           - FunctionMemorySize
           - FunctionTimeout
-          - NotificationEmail
+          - BufferSize
+          - BlockingPattern
+          - SamplingRate
+          - Debug
+      - Label:
+          default: Security configuration
+        Parameters:
+          - SsmEnabled
+          - LayerARN
     ParameterLabels:
       CoralogixRegion:
         default: Region
-      PrivateKey:
-        default: Private Key
+      ApiKey:
+        default: Api Key
       ApplicationName:
         default: Application Name
       SubsystemName:
@@ -98,9 +101,9 @@ Parameters:
       - Singapore
       - US
     Default: Europe
-  PrivateKey:
+  ApiKey:
     Type: String
-    Description: The Coralogix private key which is used to validate your authenticity
+    Description: The Coralogix api key which is used to validate your authenticity
     NoEcho: true
   ApplicationName:
     Type: String
@@ -184,15 +187,15 @@ Parameters:
 Mappings:
   CoralogixRegionMap:
     Europe:
-      LogUrl: https://ingress.coralogix.com/api/v1/logs
+      LogUrl: coralogix.com
     Europe2:
-      LogUrl: https://ingress.eu2.coralogix.com/api/v1/logs
+      LogUrl: eu2.coralogix.com
     India:
-      LogUrl: https://ingress.coralogix.in/api/v1/logs
+      LogUrl: coralogix.in
     Singapore:
-      LogUrl: https://ingress.coralogixsg.com/api/v1/logs
+      LogUrl: coralogixsg.com
     US:
-      LogUrl: https://ingress.coralogix.us/api/v1/logs
+      LogUrl: coralogix.us
 Conditions:
   IsNotificationEnabled:
     Fn::Not:
@@ -229,12 +232,16 @@ Resources:
         Variables:
           CORALOGIX_URL: !If
             - IsRegionCustomUrlEmpty
-            - !Ref CustomDomain
-            - !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+            - !Sub 'https://ingress.${CustomDomain}/api/v1/logs'
+            - !Sub
+              - '${Prefix}${Domain}${Suffix}'
+              - Prefix: https://ingress.
+                Domain: !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+                Suffix: /api/v1/logs
           CORALOGIX_BUFFER_SIZE:
             Ref: BufferSize
           private_key:
-            Ref: PrivateKey
+            Ref: ApiKey
           app_name:
             Ref: ApplicationName
           sub_name:
@@ -275,11 +282,14 @@ Resources:
         Ref: FunctionTimeout
       Environment:
         Variables:
-          CORALOGIX_URL:
-            Fn::FindInMap:
-              - CoralogixRegionMap
-              - Ref: CoralogixRegion
-              - LogUrl
+          CORALOGIX_URL: !If
+            - IsRegionCustomUrlEmpty
+            - !Sub 'https://ingress.${CustomDomain}/api/v1/logs'
+            - !Sub
+              - '${Prefix}${Domain}${Suffix}'
+              - Prefix: https://ingress.
+                Domain: !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+                Suffix: /api/v1/logs
           CORALOGIX_BUFFER_SIZE:
             Ref: BufferSize
           AWS_LAMBDA_EXEC_WRAPPER: /opt/wrapper.sh
@@ -396,7 +406,7 @@ Resources:
       Name: !Sub
         - 'lambda/coralogix/${AWS::Region}/${function}'
         - function: !Ref LambdaFunctionSSM
-      SecretString: !Ref PrivateKey
+      SecretString: !Ref ApiKey
   LambdaFunctionNotificationSubscription:
     Type: AWS::SNS::Subscription
     Condition: IsNotificationEnabled
