--- a/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
+++ b/aws-integrations/lambda-integrations/cloudtrail-sns/template.yaml
@@ -1,13 +1,12 @@
 #Created automatically from coralogix/coralogix-aws-serverless
 #Link to the repo: https://github.com/coralogix/coralogix-aws-serverless/tree/master/src/cloudtrail-sns
-#created automatically from coralogix/coralogix-aws-serverless
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Send CloudTrail logs from SNS bucket to Coralogix.
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-CloudTrail-via-SNS
-    Description: Send CloudTrail logs from SNS bucket to Coralogix.another test testtests
+    Description: Send CloudTrail logs from SNS bucket to Coralogix.
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
@@ -17,10 +16,33 @@ Metadata:
       - logs
       - cloudtrail
       - sns
-      - this is another testsssssss
     HomePageUrl: https://coralogix.com
-    SemanticVersion: 1.0.2
+    SemanticVersion: 1.0.4
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      - Label:
+          default: Coralogix configuration
+        Parameters:
+          - ApplicationName
+          - SubsystemName
+          - ApiKey
+          - CoralogixRegion
+          - CustomDomain
+      - Label:
+          default: Integration configuration
+        Parameters:
+          - SNSTopicArn
+          - S3BucketName
+          - S3KeyPrefix
+          - S3KeySuffix
+          - NotificationEmail
+      - Label:
+          default: Lambda configuration
+        Parameters:
+          - FunctionArchitecture
+          - FunctionMemorySize
+          - FunctionTimeout
 Parameters:
   CoralogixRegion:
     Type: String
@@ -36,9 +58,9 @@ Parameters:
     Type: String
     Description: The Coralogix custom domain
     Default: ''
-  PrivateKey:
+  ApiKey:
     Type: String
-    Description: The Coralogix private key which is used to validate your authenticity
+    Description: The Coralogix api key which is used to validate your authenticity
     NoEcho: true
   ApplicationName:
     Type: String
@@ -98,15 +120,15 @@ Parameters:
 Mappings:
   CoralogixRegionMap:
     Europe:
-      LogUrl: https://ingress.coralogix.com/api/v1/logs
+      LogUrl: coralogix.com
     Europe2:
-      LogUrl: https://ingress.eu2.coralogix.com/api/v1/logs
+      LogUrl: eu2.coralogix.com
     India:
-      LogUrl: https://ingress.coralogix.in/api/v1/logs
+      LogUrl: coralogix.in
     Singapore:
-      LogUrl: https://ingress.coralogixsg.com/api/v1/logs
+      LogUrl: coralogixsg.com
     US:
-      LogUrl: https://ingress.coralogix.us/api/v1/logs
+      LogUrl: coralogix.us
 Conditions:
   IsNotificationEnabled:
     Fn::Not:
@@ -134,10 +156,14 @@ Resources:
         Variables:
           CORALOGIX_URL: !If
             - IsRegionCustomUrlEmpty
-            - !Ref CustomDomain
-            - !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+            - !Sub 'https://ingress.${CustomDomain}/api/v1/logs'
+            - !Sub
+              - '${Prefix}${Domain}${Suffix}'
+              - Prefix: https://ingress.
+                Domain: !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+                Suffix: /api/v1/logs
           private_key:
-            Ref: PrivateKey
+            Ref: ApiKey
           app_name:
             Ref: ApplicationName
           sub_name:
