--- a/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
+++ b/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
@@ -2,11 +2,11 @@
 #Link to the repo: https://github.com/coralogix/coralogix-aws-serverless/tree/master/src/vpc-flow-logs
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: AWS Lambda function for sending VPC Flow Logs from an existing S3 bucket to Coralogixcoralogix
+Description: AWS Lambda function for sending VPC Flow Logs from an existing S3 bucket to Coralogix
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-VPC-Flog-Logs-S3
-    Description: Send logs from S3 bucket to Coralogix.asdas
+    Description: Send logs from S3 bucket to Coralogix.
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
@@ -16,47 +16,47 @@ Metadata:
       - logs
       - s3
       - vpc
-      - this is a tests
     HomePageUrl: https://coralogix.com
-    SemanticVersion: 1.0.5
+    SemanticVersion: 1.0.7
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: Coralogix Configuration
+          default: Coralogix configuration
         Parameters:
-          - CoralogixRegion
-          - CustomDomain
-          - PrivateKey
           - ApplicationName
           - SubsystemName
-      - Label:
-          default: Logging Configuration
-        Parameters:
-          - NewlinePattern
-          - SamplingRate
-          - BufferSize
+          - ApiKey
+          - CoralogixRegion
+          - CustomDomain
           - Debug
       - Label:
-          default: S3 Configuration
+          default: Integration configuration
         Parameters:
           - S3BucketName
           - S3KeyPrefix
           - S3KeySuffix
+          - NotificationEmail
+          - NewlinePattern
       - Label:
-          default: Lambda Configuration
+          default: Lambda configuration
         Parameters:
           - FunctionArchitecture
           - FunctionMemorySize
           - FunctionTimeout
-          - NotificationEmail
+          - BufferSize
+          - BlockingPattern
+          - SamplingRate
+      - Label:
+          default: Security configuration
+        Parameters:
           - SsmEnabled
           - LayerARN
     ParameterLabels:
       CoralogixRegion:
         default: Region
-      PrivateKey:
-        default: Private Key
+      ApiKey:
+        default: Api Key
       SsmEnabled:
         default: SsmEnabled
       LayerARN:
@@ -104,9 +104,9 @@ Parameters:
     Type: String
     Description: The Coralogix custom domain
     Default: ''
-  PrivateKey:
+  ApiKey:
     Type: String
-    Description: The Coralogix private key which is used to validate your authenticity
+    Description: The Coralogix api key which is used to validate your authenticity
     NoEcho: true
   LayerARN:
     Type: String
@@ -194,15 +194,15 @@ Parameters:
 Mappings:
   CoralogixRegionMap:
     Europe:
-      LogUrl: https://ingress.coralogix.com/api/v1/logs
+      LogUrl: coralogix.com
     Europe2:
-      LogUrl: https://ingress.eu2.coralogix.com/api/v1/logs
+      LogUrl: eu2.coralogix.com
     India:
-      LogUrl: https://ingress.coralogix.in/api/v1/logs
+      LogUrl: coralogix.in
     Singapore:
-      LogUrl: https://ingress.coralogixsg.com/api/v1/logs
+      LogUrl: coralogixsg.com
     US:
-      LogUrl: https://ingress.coralogix.us/api/v1/logs
+      LogUrl: coralogix.us
 Conditions:
   IsNotificationEnabled:
     Fn::Not:
@@ -239,10 +239,14 @@ Resources:
         Variables:
           CORALOGIX_URL: !If
             - IsRegionCustomUrlEmpty
-            - !Ref CustomDomain
-            - !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+            - !Sub 'https://ingress.${CustomDomain}/api/v1/logs'
+            - !Sub
+              - '${Prefix}${Domain}${Suffix}'
+              - Prefix: https://ingress.
+                Domain: !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+                Suffix: /api/v1/logs
           CORALOGIX_BUFFER_SIZE: !Ref BufferSize
-          private_key: !Ref PrivateKey
+          private_key: !Ref ApiKey
           app_name: !Ref ApplicationName
           sub_name: !Ref SubsystemName
           newline_pattern: !Ref NewlinePattern
@@ -322,8 +326,12 @@ Resources:
         Variables:
           CORALOGIX_URL: !If
             - IsRegionCustomUrlEmpty
-            - !Ref CustomDomain
-            - !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+            - !Sub 'https://ingress.${CustomDomain}/api/v1/logs'
+            - !Sub
+              - '${Prefix}${Domain}${Suffix}'
+              - Prefix: https://ingress.
+                Domain: !FindInMap [CoralogixRegionMap, !Ref CoralogixRegion, LogUrl]
+                Suffix: /api/v1/logs
           CORALOGIX_BUFFER_SIZE: !Ref BufferSize
           AWS_LAMBDA_EXEC_WRAPPER: /opt/wrapper.sh
           app_name: !Ref ApplicationName
@@ -381,7 +389,7 @@ Resources:
       Name: !Sub
         - 'lambda/coralogix/${AWS::Region}/${function}'
         - function: !Ref LambdaFunctionSSM
-      SecretString: !Ref PrivateKey
+      SecretString: !Ref ApiKey
   # define a custom resource to create the trigger
   CustomResourceLambdaTriggerFunction:
     Type: AWS::Serverless::Function
@@ -474,6 +482,3 @@ Resources:
                     {},
                     event.get('PhysicalResourceId', context.aws_request_id)
                 )
-      CodeUri:
-        Bucket: !Sub 'coralogix-serverless-repo-${AWS::Region}'
-        Key: helper.zip
