--- a/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
+++ b/aws-integrations/lambda-integrations/vpc-flow-logs/template.yaml
@@ -15,7 +15,7 @@ Metadata:
       - coralogix
       - logs
       - s3
-      - vpc
+      - vpcc
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.7
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
