--- a/aws-integrations/lambda-integrations/msk/template.yaml
+++ b/aws-integrations/lambda-integrations/msk/template.yaml
@@ -17,7 +17,7 @@ Metadata:
       - apache
       - kafka
       - msk
-      - stream
+      - streamm
     HomePageUrl: https://coralogix.com
     SemanticVersion: 1.0.8
     SourceCodeUrl: https://github.com/coralogix/coralogix-aws-serverless
