--- a/aws-integrations/lambda-integrations/s3/template.yaml
+++ b/aws-integrations/lambda-integrations/s3/template.yaml
@@ -6,7 +6,7 @@ Description: Send logs from S3 bucket to Coralogix.
 Metadata:
   AWS::ServerlessRepo::Application:
     Name: Coralogix-S3
-    Description: Send logs from S3 bucket to Coralogix.   test.
+    Description: Send logs from S3 bucket to Coralogix.   test..
     Author: Coralogix
     SpdxLicenseId: Apache-2.0
     LicenseUrl: LICENSE
