--- a/.github/workflows/realse.yaml
+++ b/.github/workflows/realse.yaml
@@ -4,8 +4,9 @@ name: Release
 on:
   push:
     branches: [master]
-    path:
-      **/.yaml
+    paths:
+      - "**/yaml"
+      - "**/yml"
       
 
 env:
