--- a/.github/workflows/realse.yaml
+++ b/.github/workflows/realse.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches: [master]
     paths:
-      - "**/*.yaml"
-      - "**/*.yml"
+      - "**/template.yaml"
+      - "**/template.yml"
       
 
 env:
