--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,6 +38,7 @@ jobs:
           read -ra changed_files_array <<< "$changed_files_string"
           for changed_template in "${changed_files_array[@]}"; do
             if [[ ${changed_template} == */template.* ]]; then
+               echo $changed_template
                aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
             fi
           done
