--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,9 +36,7 @@ jobs:
         run: |
           changed_files_string="${{ steps.changed-files.outputs.all_changed_files }}"
           read -ra changed_files_array <<< "$changed_files_string"
-          for changed_template in "${changed_files_array[@]}"; do
-            if [[ ${changed_template} == */template.* ]]; then
-               echo $changed_template
-               aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
-            fi
+          for changed_file in "${changed_files_array[@]}"; do
+            integration=$(echo "$changed_file" | xargs -n1 dirname | xargs -n1 basename)
+            aws s3 cp  $changed_file s3://gr-integrations-aws-testing/${integration}.yml
           done
