--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,13 +20,19 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
     
-      - name: Configure AWS credentials
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.PUBLISH_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
-        run: |
-          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV 
+#       - name: Configure AWS credentials
+#         env:
+#           AWS_ACCESS_KEY_ID: ${{ secrets.PUBLISH_ACCESS_KEY }}
+#           AWS_SECRET_ACCESS_KEY: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
+#         run: |
+#           echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
+#           echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV 
+
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.PUBLISH_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
           
       - name: Get changed files
         id: changed-files
