--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,5 +43,7 @@ jobs:
           changed_files_string="${{ steps.changed-files.outputs.all_changed_files }}"
           read -ra changed_files_array <<< "$changed_files_string"
           for changed_template in "${changed_files_array[@]}"; do
-            aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
+            if [[ $changed_template == */template.* ]]; then
+              aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
+            fi
           done
