--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,7 +8,6 @@ on:
       - "**/template.yaml"
       - "**/template.yml"
 
-
 jobs:
   Publish:
     name: publish
@@ -19,12 +18,14 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
-
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.PUBLISH_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
+    
+      - name: Configure AWS credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.PUBLISH_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.PUBLISH_SECRET_ACCESS_KEY }}
+        run: |
+          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV 
           
       - name: Get changed files
         id: changed-files
@@ -35,7 +36,5 @@ jobs:
           changed_files_string="${{ steps.changed-files.outputs.all_changed_files }}"
           read -ra changed_files_array <<< "$changed_files_string"
           for changed_template in "${changed_files_array[@]}"; do
-            if [[ $changed_template == */template.* ]]; then
-              aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
-            fi
+            aws s3 cp  $changed_template s3://cgx-cloudformation-templates/${changed_template}
           done
